# pactwatch

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  action.yml  demo.cast  demo_test.sh  pyproject.toml
docs/: PRODUCTION_GUIDE.md
examples/demo-monorepo/: pactwatch.yaml
scripts/: demo_record.sh
src/breakwatch/: __init__.py  __main__.py  action.py  classifier.py  cli.py  diff.py  filter.py  github.py  graph.py  loader.py
src/breakwatch/formatters/: __init__.py  json.py  markdown.py  text.py
src/pactwatch/: __init__.py  __main__.py  action.py  classifier.py  cli.py  filter.py  github.py  graph.py  loader.py
src/pactwatch/formatters/: __init__.py  (+3 more)
tests/: test_action.py  test_classifier.py  test_cli.py  test_diff.py  test_filter.py  test_github.py  test_graph.py  test_loader.py  test_markdown_formatter.py
tests/fixtures/: 01_removed_endpoint_new.yaml  01_removed_endpoint_old.yaml  02_removed_response_field_new.yaml  02_removed_response_field_old.yaml  03_type_change_new.yaml  03_type_change_old.yaml  04_required_request_field_added_new.yaml  04_required_request_field_added_old.yaml  05_status_code_removed_new.yaml  05_status_code_removed_old.yaml  06_auth_scheme_changed_new.yaml  06_auth_scheme_changed_old.yaml  07_optional_to_required_new.yaml  07_optional_to_required_old.yaml  08_made_nullable_new.yaml  08_made_nullable_old.yaml  09_enum_removed_new.yaml  09_enum_removed_old.yaml  10_new_endpoint_new.yaml  10_new_endpoint_old.yaml  11_new_optional_field_new.yaml  11_new_optional_field_old.yaml  12_mixed_changes_new.yaml  12_mixed_changes_old.yaml
(+11 files in other folders)
